# custerion-collection

./: .dockerignore  .env.example  .env.ollama  .gitignore  Design.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/artifacts/: blade-runner-20260316-232636.json  blade-runner-20260316-232636.md  local-smoke-20260316-115131.json  local-smoke-20260316-115131.md  the-red-shoes-1948-20260316-235759.json  the-red-shoes-1948-20260316-235759.md  the-red-shoes-20260316-120544.json  the-red-shoes-20260316-120544.md
data/diagnostics/: 20260316-115131-0287c4ee.json  20260316-120544-7afa4ae9.json  20260316-232636-dc5ab94f.json  20260316-233049-68af65d7.json  20260316-235759-ebd3676a.json  live_llm_test_quota.json
data/schemas/: deep_dive_artifact.schema.json
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/routes/: +page.svelte  layout.css
frontend/src/routes/api/artifacts/: +server.ts
frontend/src/routes/api/health/: +server.ts
src/custerion_collection/: __init__.py  api.py  artifact_builder.py  commentary.py  config.py  crew.py  identity.py  live_test_guard.py  main.py  models.py  schema.py  service.py  storage.py  suggestion.py  tools.py  tts.py
tests/: test_api.py  test_artifact_builder.py  test_commentary.py  test_config.py  test_identity.py  test_live_llm_integration.py  test_live_test_guard.py  test_main_integration.py  test_models_schema.py  test_service.py  test_storage.py  test_suggestion.py  test_tools.py  test_tools_resilience.py
(+15 files in other folders)
